--- a/Etickets_Platform/Views/_ViewImports.cshtml
+++ b/Etickets_Platform/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Etickets_Platform
 @using Etickets_Platform.Models
+@using Microsoft.AspNetCore.Identity;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
